fix categories alignment

--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -2,7 +2,6 @@
   background-color: $categoryBackground;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   text-align: center;
   align-items: center;
   padding: 18px 11px 30.7px 12px;
@@ -21,12 +20,13 @@
     margin-bottom: 11.4px;
   }
   &__grid {
+    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    text-align: center;
     font-size: 14px;
     font-weight: bold;
     line-height: 2.14;
+    gap: 10px;
   }
   &__image {
     border-radius: 50%;
